# hik_camera

./: README.md
hik_driver/: CMakeLists.txt  README.md
hik_driver/include/: hik_driver.h
hik_driver/src/: CMakeLists.txt  hik_driver.cpp
hik_driver_test/: CMakeLists.txt
hik_driver_test/include/hik/: HCNetSDK.h
hik_driver_test/src/: CMakeLists.txt  call_lib.py  main.cpp
hik_sdk_demo/: CMakeLists.txt
hik_sdk_demo/src/: CMakeLists.txt  main.cpp
